--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,19 @@
 }
 
 .display {
+  position: relative;
+  text-align: center;
+  margin-top: 25px;
+  border: 3px solid black;
+  font-weight: bolder;
+  padding: 5px;
+  overflow-y: auto;
+  height: 300px;
+  color: white;
+}
+
+.displayTwo {
+  
   text-align: center;
   margin-top: 25px;
   border: 3px solid black;
@@ -43,7 +56,17 @@
   min-width: 100%;
   min-height: 100%;
 }
+#backVideo {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  left: 0;
+  top: 0;
+  object-fit: cover;
+}
 
+  
 @media only screen and (max-width: 768px) {
   .App {
     margin: 0 auto;
